--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                 <div class="section-status status-active">✅ Active System</div>
             </div>
 
-            <div class="section-card" onclick="window.open('/schedule.html', '_blank')">
+            <div class="section-card" onclick="window.open('schedule.html', '_blank')">
                 <div class="section-header">
                     <div class="section-icon">📅</div>
                     <div>
@@ -619,7 +619,7 @@
                 <div class="section-status status-available">✅ Available</div>
             </div>
 
-            <div class="section-card" onclick="window.open('/reports.html', '_blank')">
+            <div class="section-card" onclick="window.open('reports.html', '_blank')">
                 <div class="section-header">
                     <div class="section-icon">📊</div>
                     <div>
@@ -680,10 +680,18 @@
                 <span>🗺️</span>
                 <h3 class="service-area-title">Service Area Map</h3>
             </div>
-            <div class="map-placeholder">
-                <div>
-                    <p>📍 Service Area: Lucas, Allen, McKinney, Plano, Frisco, Wylie, Fairview, Parker</p>
-                    <p>Click to view interactive map with customer locations</p>
+            <div id="serviceAreaMap" style="width: 100%; height: 300px; border-radius: 8px; border: 1px solid #e2e8f0;">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d429168.10916846283!2d-96.96523!3d33.040417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864c19f77b45974b%3A0xb9ec9ba4f647678f!2sLucas%2C%20TX!5e0!3m2!1sen!2sus!4v1635959999999!5m2!1sen!2sus&zoom=10"
+                    width="100%" 
+                    height="300" 
+                    style="border:0; border-radius: 8px;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+                <div style="position: absolute; bottom: 10px; left: 10px; background: rgba(255,255,255,0.9); padding: 0.5rem; border-radius: 4px; font-size: 0.75rem; color: #64748b;">
+                    📍 Service Areas: Lucas, Allen, McKinney, Plano, Frisco, Wylie, Fairview, Parker
                 </div>
             </div>
         </div>
