--- a/index.html
+++ b/index.html
@@ -301,7 +301,23 @@
 
         <div class="service-areas">
             <h3>🗺️ Service Areas</h3>
-            <div class="areas-list">
+            <div class="map-container">
+                <div style="height: 400px; width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); display: flex; align-items: center; justify-content: center; color: white; text-align: center; position: relative; overflow: hidden;">
+                    <div style="z-index: 2; position: relative;">
+                        <div style="font-size: 2rem; margin-bottom: 1rem;">🦅</div>
+                        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.5rem;">A-1 Affordable Plumbing Services</h3>
+                        <p style="margin: 0; opacity: 0.9;">Serving North Dallas Communities</p>
+                        <div style="margin-top: 1rem; display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
+                            <span style="background: rgba(255,255,255,0.2); padding: 0.25rem 0.75rem; border-radius: 20px; font-size: 0.9rem;">Allen</span>
+                            <span style="background: rgba(255,255,255,0.2); padding: 0.25rem 0.75rem; border-radius: 20px; font-size: 0.9rem;">McKinney</span>
+                            <span style="background: rgba(255,255,255,0.2); padding: 0.25rem 0.75rem; border-radius: 20px; font-size: 0.9rem;">Plano</span>
+                            <span style="background: rgba(255,255,255,0.2); padding: 0.25rem 0.75rem; border-radius: 20px; font-size: 0.9rem;">Frisco</span>
+                        </div>
+                    </div>
+                    <div style="position: absolute; top: -50%; left: -50%; width: 200%; height: 200%; background: url('data:image/svg+xml,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\"><circle cx=\"50\" cy=\"50\" r=\"2\" fill=\"white\" opacity=\"0.1\"/><circle cx=\"20\" cy=\"20\" r=\"1\" fill=\"white\" opacity=\"0.1\"/><circle cx=\"80\" cy=\"30\" r=\"1.5\" fill=\"white\" opacity=\"0.1\"/><circle cx=\"30\" cy=\"80\" r=\"1\" fill=\"white\" opacity=\"0.1\"/><circle cx=\"70\" cy=\"70\" r=\"2\" fill=\"white\" opacity=\"0.1\"/></svg>') repeat; animation: float 20s infinite linear;"></div>
+                </div>
+            </div>
+            <div class="areas-list" style="margin-top: 1rem;">
                 <span class="area-tag">Allen</span>
                 <span class="area-tag">McKinney</span>
                 <span class="area-tag">Plano</span>
@@ -426,6 +442,143 @@
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('service-worker.js');
         }
+
+        // Google Maps Initialization
+        function initMap() {
+            // Center on Dallas/Plano area
+            const center = { lat: 33.0198, lng: -96.6989 };
+            
+            const map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 11,
+                center: center,
+                styles: [
+                    {
+                        featureType: 'all',
+                        elementType: 'geometry.fill',
+                        stylers: [{ color: '#f8fafc' }]
+                    },
+                    {
+                        featureType: 'water',
+                        elementType: 'geometry',
+                        stylers: [{ color: '#e2e8f0' }]
+                    },
+                    {
+                        featureType: 'road',
+                        elementType: 'geometry',
+                        stylers: [{ color: '#ffffff' }]
+                    }
+                ]
+            });
+
+            // Service area polygons
+            const serviceAreas = [
+                {
+                    name: 'Allen',
+                    coords: [
+                        { lat: 33.1031, lng: -96.6706 },
+                        { lat: 33.1031, lng: -96.6306 },
+                        { lat: 33.0831, lng: -96.6306 },
+                        { lat: 33.0831, lng: -96.6706 }
+                    ]
+                },
+                {
+                    name: 'McKinney',
+                    coords: [
+                        { lat: 33.2176, lng: -96.6397 },
+                        { lat: 33.2176, lng: -96.5797 },
+                        { lat: 33.1776, lng: -96.5797 },
+                        { lat: 33.1776, lng: -96.6397 }
+                    ]
+                },
+                {
+                    name: 'Plano',
+                    coords: [
+                        { lat: 33.0698, lng: -96.7397 },
+                        { lat: 33.0698, lng: -96.6797 },
+                        { lat: 33.0098, lng: -96.6797 },
+                        { lat: 33.0098, lng: -96.7397 }
+                    ]
+                },
+                {
+                    name: 'Frisco',
+                    coords: [
+                        { lat: 33.1507, lng: -96.8236 },
+                        { lat: 33.1507, lng: -96.7636 },
+                        { lat: 33.1107, lng: -96.7636 },
+                        { lat: 33.1107, lng: -96.8236 }
+                    ]
+                }
+            ];
+
+            // Add service area polygons
+            serviceAreas.forEach(area => {
+                const polygon = new google.maps.Polygon({
+                    paths: area.coords,
+                    strokeColor: '#007bff',
+                    strokeOpacity: 0.8,
+                    strokeWeight: 2,
+                    fillColor: '#007bff',
+                    fillOpacity: 0.2
+                });
+                polygon.setMap(map);
+
+                // Add area label
+                const infoWindow = new google.maps.InfoWindow({
+                    content: `<div style="font-weight: bold; color: #1a365d;">${area.name}</div><div style="color: #64748b;">A-1APSVC Service Area</div>`,
+                    position: area.coords[0]
+                });
+
+                polygon.addListener('click', () => {
+                    infoWindow.open(map);
+                });
+            });
+
+            // Add company marker
+            const marker = new google.maps.Marker({
+                position: center,
+                map: map,
+                title: 'A-1 Affordable Plumbing Services',
+                icon: {
+                    url: 'data:image/svg+xml;charset=UTF-8,' + encodeURIComponent(`
+                        <svg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="20" cy="20" r="18" fill="#007bff" stroke="#ffffff" stroke-width="2"/>
+                            <text x="20" y="26" text-anchor="middle" fill="white" font-size="16" font-weight="bold">A1</text>
+                        </svg>
+                    `),
+                    scaledSize: new google.maps.Size(40, 40)
+                }
+            });
+
+            const infoWindow = new google.maps.InfoWindow({
+                content: `
+                    <div style="padding: 10px;">
+                        <h3 style="margin: 0 0 5px 0; color: #1a365d;">A-1 Affordable Plumbing Services</h3>
+                        <p style="margin: 0; color: #64748b;">Professional plumbing services across North Dallas</p>
+                        <p style="margin: 5px 0 0 0; color: #007bff; font-weight: bold;">Serving Allen, McKinney, Plano, Frisco & More</p>
+                    </div>
+                `
+            });
+
+            marker.addListener('click', () => {
+                infoWindow.open(map, marker);
+            });
+        }
+
+        // Load Google Maps when page loads
+        window.addEventListener('load', function() {
+            // Load saved logo
+            const savedLogo = localStorage.getItem('a1apsvc-logo');
+            if (savedLogo) {
+                const headerLogo = document.getElementById('headerLogo');
+                headerLogo.src = savedLogo;
+                headerLogo.classList.remove('hidden');
+            }
+
+            // Initialize Google Maps
+            if (typeof google !== 'undefined' && google.maps) {
+                initMap();
+            }
+        });
     </script>
 </body>
 </html>
