--- a/index.html
+++ b/index.html
@@ -271,16 +271,21 @@
                     <div class="stat-label">Monthly Revenue</div>
                 </div>
             </div>
-        </div>
+                 <a href="schedule.html" class="dashboard-card">
+                    <div class="card-icon">📅</div>
+                    <div class="card-content">
+                        <h3>Scheduling</h3>
+                        <p>Manage appointments and technician assignments</p>
+                    </div>
+                </a>
 
-        <div class="dashboard-grid">
-            <div class="card" onclick="location.href='schedule.html'">
-                <span class="card-icon">📅</span>
-                <h3>Scheduling</h3>
-                <p>Manage appointments and technician schedules for Chris and Ivan</p>
-            </div>
-            
-            <div class="card" onclick="location.href='reports.html'">
+                <a href="tech-mobile.html" class="dashboard-card">
+                    <div class="card-icon">📱</div>
+                    <div class="card-content">
+                        <h3>Tech Mobile</h3>
+                        <p>Mobile interface for technicians in the field</p>
+                    </div>
+                </a>        <div class="card" onclick="location.href='reports.html'">
                 <span class="card-icon">📊</span>
                 <h3>Financial Reports</h3>
                 <p>View revenue, expenses, and business analytics</p>
