--- a/index.html
+++ b/index.html
@@ -272,21 +272,19 @@
                     <div class="stat-label">Monthly Revenue</div>
                 </div>
             </div>
-                 <a href="schedule.html" class="dashboard-card">
-                    <div class="card-icon"><i class="fas fa-calendar-alt"></i></div>
-                    <div class="card-content">
-                        <h3>Scheduling</h3>
-                        <p>Manage appointments and technician assignments</p>
-                    </div>
-                </a>
+            <div class="card" onclick="location.href='schedule.html'">
+                <span class="card-icon"><i class="fas fa-calendar-alt"></i></span>
+                <h3>Scheduling</h3>
+                <p>Manage appointments and technician assignments</p>
+            </div>
 
-                <a href="tech-mobile.html" class="dashboard-card">
-                    <div class="card-icon"><i class="fas fa-mobile-alt"></i></div>
-                    <div class="card-content">
-                        <h3>Tech Mobile</h3>
-                        <p>Mobile interface for technicians in the field</p>
-                    </div>
-                </a>        <div class="card" onclick="location.href='reports.html'">
+            <div class="card" onclick="location.href='tech-mobile.html'">
+                <span class="card-icon"><i class="fas fa-mobile-alt"></i></span>
+                <h3>Tech Mobile</h3>
+                <p>Mobile interface for technicians in the field</p>
+            </div>
+            
+            <div class="card" onclick="location.href='reports.html'">
                 <span class="card-icon"><i class="fas fa-chart-bar"></i></span>
                 <h3>Financial Reports</h3>
                 <p>View revenue, expenses, and business analytics</p>
