--- a/index.html
+++ b/index.html
@@ -305,23 +305,8 @@
 
         <div class="service-areas">
             <h3><i class="fas fa-map-marked-alt"></i> Service Areas</h3>
-            <div class="map-container">
-                <div style="height: 400px; width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); display: flex; align-items: center; justify-content: center; color: white; text-align: center; position: relative; overflow: hidden;">
-                    <div style="z-index: 2; position: relative;">
-                        <div style="font-size: 2rem; margin-bottom: 1rem;">🦅</div>
-                        <h3 style="margin: 0 0 0.5rem 0; font-size: 1.5rem;">A-1 Affordable Plumbing Services</h3>
-                        <p style="margin: 0; opacity: 0.9;">Serving North Dallas Communities</p>
-                        <div style="margin-top: 1rem; display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-                            <span style="background: rgba(255,255,255,0.2); padding: 0.25rem 0.75rem; border-radius: 20px; font-size: 0.9rem;">Allen</span>
-                            <span style="background: rgba(255,255,255,0.2); padding: 0.25rem 0.75rem; border-radius: 20px; font-size: 0.9rem;">McKinney</span>
-                            <span style="background: rgba(255,255,255,0.2); padding: 0.25rem 0.75rem; border-radius: 20px; font-size: 0.9rem;">Plano</span>
-                            <span style="background: rgba(255,255,255,0.2); padding: 0.25rem 0.75rem; border-radius: 20px; font-size: 0.9rem;">Frisco</span>
-                        </div>
-                    </div>
-                    <div style="position: absolute; top: -50%; left: -50%; width: 200%; height: 200%; background: url('data:image/svg+xml,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\"><circle cx=\"50\" cy=\"50\" r=\"2\" fill=\"white\" opacity=\"0.1\"/><circle cx=\"20\" cy=\"20\" r=\"1\" fill=\"white\" opacity=\"0.1\"/><circle cx=\"80\" cy=\"30\" r=\"1.5\" fill=\"white\" opacity=\"0.1\"/><circle cx=\"30\" cy=\"80\" r=\"1\" fill=\"white\" opacity=\"0.1\"/><circle cx=\"70\" cy=\"70\" r=\"2\" fill=\"white\" opacity=\"0.1\"/></svg>') repeat; animation: float 20s infinite linear;"></div>
-                </div>
-            </div>
-            <div class="areas-list" style="margin-top: 1rem;">
+            <div class="areas-list">
+                <span class="area-tag">Lucas</span>
                 <span class="area-tag">Allen</span>
                 <span class="area-tag">McKinney</span>
                 <span class="area-tag">Plano</span>
@@ -329,6 +314,7 @@
                 <span class="area-tag">Wylie</span>
                 <span class="area-tag">Fairview</span>
                 <span class="area-tag">Parker</span>
+                <span class="area-tag">Carrollton</span>
             </div>
         </div>
     </div>
@@ -586,4 +572,5 @@
     </script>
 </body>
 </html>
+
 
