--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
         .dashboard-cards {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 1.5rem;
+            gap: 2rem;
+            margin-top: 3rem;
             margin-bottom: 2rem;
         }
 
@@ -161,25 +162,28 @@
         }
 
         .card.scheduling {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
+            color: white;
         }
 
         .card.tech-mobile {
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            background: linear-gradient(135deg, #374151 0%, #6b7280 100%);
+            color: white;
         }
 
         .card.financial {
-            background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+            background: linear-gradient(135deg, #dbeafe 0%, #f8fafc 100%);
+            color: #374151;
         }
 
         .card.customer {
-            background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);
-            color: #333;
+            background: linear-gradient(135deg, #dc2626 0%, #ef4444 100%);
+            color: white;
         }
 
         .card.import {
-            background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);
-            color: #333;
+            background: linear-gradient(135deg, #111827 0%, #374151 100%);
+            color: white;
         }
 
         .card-icon {
@@ -200,57 +204,26 @@
             opacity: 0.9;
         }
 
-        .card.customer h3,
-        .card.import h3 {
-            color: #333;
+        .card.financial h3,
+        .card.financial p {
+            color: #374151;
         }
 
-        .card.customer p,
-        .card.import p {
-            color: #555;
+        .card.financial .card-icon {
+            color: #374151;
         }
 
         @media (max-width: 768px) {
             .dashboard-cards {
                 grid-template-columns: 1fr;
-                gap: 1rem;
+                gap: 1.2rem;
+                margin-top: 2rem;
             }
             
             .card {
                 min-height: 120px;
                 padding: 1.2rem;
             }
-        }
-
-        .service-areas {
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
-            padding: 2rem;
-            border-radius: 16px;
-            box-shadow: 0 8px 32px rgba(0,0,0,0.1);
-            text-align: center;
-        }
-
-        .service-areas h3 {
-            color: #1a365d;
-            margin-bottom: 1rem;
-            font-size: 1.5rem;
-        }
-
-        .areas-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1rem;
-        }
-
-        .area-tag {
-            background: linear-gradient(135deg, #10b981, #059669);
-            color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
-            font-size: 0.9rem;
-            font-weight: 500;
         }
 
         @media (max-width: 768px) {
@@ -352,21 +325,6 @@
                     <h3>Import from Housecall Pro</h3>
                     <p>Import your existing customer data and service history</p>
                 </div>
-            </div>
-        </div>
-
-        <div class="service-areas">
-            <h3><i class="fas fa-map-marked-alt"></i> Service Areas</h3>
-            <div class="areas-list">
-                <span class="area-tag">Lucas</span>
-                <span class="area-tag">Allen</span>
-                <span class="area-tag">McKinney</span>
-                <span class="area-tag">Plano</span>
-                <span class="area-tag">Frisco</span>
-                <span class="area-tag">Wylie</span>
-                <span class="area-tag">Fairview</span>
-                <span class="area-tag">Parker</span>
-                <span class="area-tag">Carrollton</span>
             </div>
         </div>
     </div>
