--- a/index.html
+++ b/index.html
@@ -256,6 +256,55 @@
     </style>
 </head>
 <body>
+    <!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
+
+<script>
+  // Your Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyD-EXAMPLEKEY",
+    authDomain: "a1apsvc.firebaseapp.com",
+    projectId: "a1apsvc",
+    storageBucket: "a1apsvc.appspot.com",
+    messagingSenderId: "1234567890",
+    appId: "1:1234567890:web:abcdef123456"
+  };
+
+  // Initialize Firebase
+  const app = firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  // Fetch jobs and update stats
+  async function getJobs() {
+    console.log("getJobs called");
+    const snapshot = await db.collection("jobs").get();
+    const jobs = snapshot.docs.map(doc => doc.data());
+
+    // Stats logic
+    const today = new Date().toISOString().slice(0, 10);
+    const thisWeekStart = new Date();
+    thisWeekStart.setDate(thisWeekStart.getDate() - thisWeekStart.getDay());
+    const thisWeekISO = thisWeekStart.toISOString().slice(0, 10);
+
+    const todayJobs = jobs.filter(job => job.date === today);
+    const weekJobs = jobs.filter(job => job.date >= thisWeekISO);
+    const activeCustomers = [...new Set(jobs.map(job => job.customerId))];
+    const monthlyRevenue = jobs
+      .filter(job => job.date?.startsWith(today.slice(0, 7)))
+      .reduce((sum, job) => sum + (job.amount || 0), 0);
+
+    // Update DOM
+    document.getElementById("today-jobs").textContent = todayJobs.length;
+    document.getElementById("week-jobs").textContent = weekJobs.length;
+    document.getElementById("active-customers").textContent = activeCustomers.length;
+    document.getElementById("monthly-revenue").textContent = `$${monthlyRevenue.toFixed(2)}`;
+  }
+
+  // Call it on load
+  window.onload = getJobs;
+</script>
+
     <header class="header">
         <div class="header-content">
             <div class="logo-section">
