--- a/index.html
+++ b/index.html
@@ -654,17 +654,6 @@ function processImport() {
                 initMap();
             }
         });
-        async function getCustomerInsights(customerId) {
-  const db = firebase.firestore();
-  const insights = {
-    totalJobs: 0,
-    totalInvoices: 0,
-    lifetimeSpend: 0,
-    lastServiceDate: null,
-    jobTypes: {},
-    recurringIssues: [],
-    suggestions: []
-  };
 
   const jobsSnapshot = await db.collection('jobs')
     .where('customerId', '==', customerId)
@@ -716,6 +705,15 @@ function processImport() {
 }
 
     </script>
+    <!-- Firebase SDKs and inline scripts -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+<script>
+  // Your Firebase config and inline logic
+</script>
+
+<!-- Your shared utility script -->
+<script src="scripts/dashboard-utils.js"></script>
 </body>
 </html>
 
